# bazelsample

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  sample.go  sample_test.go
cmd/bazelsample/: BUILD.bazel  bazelsample.go
