load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bazelsample.go"],
    importpath = "github.com/mura-s/bazelsample/cmd/bazelsample",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "bazelsample",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
